<resources>
    <string name="app_name">Aplikacja do głosowania</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="additional_participants">+%1$d</string>
    <string name="log_in">Zaloguj</string>
    <string name="email_address">Adres email</string>
    <string name="password">Hasło</string>
    <string name="or">  lub  </string>
    <string name="wyloguj">Wyloguj</string>
    <string name="profil">Profil</string>
    <string name="vote">Głosowanie</string>
    <string name="about">Opis:</string>
    <string name="candidate_name">Imię kandydata</string>
    <string name="voting_name">Nazwa głosowania</string>
    <string name="candidates">Kandydaci</string>
    <string name="add">Dodaj</string>
    <string name="add_new_vote">Dodaj nowe głosowanie</string>
    <string name="archived_votes">Zarchiwizowane głosowania</string>
    <string name="dodaj_g_osowanie">Dodaj głosowanie</string>

</resources>