<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_app_title"
        style="@style/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/login_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Roboto14Pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/login_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_app_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_app_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_inputs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/login_email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/Roboto14Pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address" />

                <EditText
                    style="@style/Roboto14Pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:id="@+id/email"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/login_email_container">

                <TextView
                    style="@style/Roboto14Pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    style="@style/Roboto14Pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/login_forgot_password"
            style="@style/CaptionRoboto12PtBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_inputs_container" />

        <Button
            android:id="@+id/login_email_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/log_in"
            app:layout_constraintTop_toBottomOf="@id/login_forgot_password" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_register_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_email_login_button">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/login_or_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/login_register_text">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/cool_grey" />

            <TextView
                style="@style/CaptionRoboto12Pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/pale_grey"
                android:gravity="center"
                android:minWidth="40dp"
                android:text="@string/or" />
        </FrameLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/login_or_text">

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/login_email_google_button_container"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                app:layout_constraintTop_toBottomOf="@id/login_email_facebook_button_container"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                style="@style/button.loginButton.gmail"-->
<!--                android:theme="@style/button.loginButton.gmail">-->
<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent">-->
<!--                    <com.google.android.gms.common.SignInButton-->
<!--                        android:id="@+id/login_email_google_button"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:visibility="gone"-->
<!--                        app:layout_constraintTop_toTopOf="parent"-->
<!--                        />-->
<!--                    <ImageView-->
<!--                        android:layout_width="50dp"-->
<!--                        android:layout_height="50dp"-->
<!--                        app:layout_constraintTop_toTopOf="parent"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
<!--                        android:padding="12dp"-->
<!--                        android:src="@drawable/google_icon64" />-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/continue_with_google"-->
<!--                        app:layout_constraintTop_toTopOf="parent"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintBottom_toBottomOf="parent"/>-->
<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--            </androidx.cardview.widget.CardView>-->

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_email_facebook_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Zaloguj się z Google"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>